--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,24 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
+    environment:
+      DATABASE_HOST: database
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: some-long-secure-password
+      POSTGRES_DB: myapp_development
+    env_file:
+      - .env/development/database
+      - .env/development/web
 
   redis:
     image: redis
+
+  database:
+    image: postgres
+    env_file:
+      - .env/development/database
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
