--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     ports: 
       - "3000:3000"
+      - "4000:4000"
     volumes:
       - .:/usr/src/app
     environment:
@@ -25,7 +26,14 @@ services:
       - .env/development/database
     environment:
       - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
-
+  
+  selenium_chrome:
+    image: selenium/standalone-chrome-debug
+    logging: 
+      driver: none
+    ports: 
+      - "5900:5900"
+  
   redis:
     image: redis
 
