--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,7 +8,7 @@ RUN \
     curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
     apt-get update && \
-    apt-get install -y --force-yes --no-install-recommends nodejs yarn
+    apt-get install -y --force-yes --no-install-recommends netcat nodejs yarn
 
 
 COPY Gemfile* /usr/src/app/
@@ -18,6 +18,8 @@ ENV BUNDLE_PATH /gems
 RUN bundle install
 
 COPY . /usr/src/app/
+RUN ["chmod", "+x", "/usr/src/app/wait-for"]
 
+RUN bin/rails assets:precompile
 ENTRYPOINT ["./docker-entrypoint.sh"]
 CMD ["bin/rails", "s", "-b", "0.0.0.0"] 
